--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,3 +8,19 @@
 .header__logo {
     margin: 18px 0 0 70px;
 }
+
+.header__logo_auth {
+    margin: 70px 0 0 442px;
+}
+
+@media screen and (max-width: 1024px) {
+    .header__logo {
+        margin: 18px 0 0 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header__logo {
+        margin: 18px 0 0 14px;
+    }
+}
