--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -3,7 +3,7 @@
     background-color: #202020;
 }
 
-.about-me__header {
+.about-me__title {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -15,7 +15,7 @@
 }
 
 .about-me__student-container {
-    max-width: 1140px;
+    max-width: calc(100vw - 140px);
     padding: 66px 0 100px 0;
     margin: 0 auto;
     border-top: 1px solid #DADADA;
@@ -113,7 +113,7 @@
     flex-direction: column;
     margin: 0 auto;
     width: 100%;
-    max-width: 1140px;
+    max-width: calc(100vw - 140px);
 }
 
 .about-me__portfolio-link {
@@ -141,4 +141,66 @@
     background-image: url("../../../images/portfolioLink.svg");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .about-me__title {
+        padding: 90px 0 23px 50px;
+    }
+
+    .about-me__student-container {
+        max-width: calc(100vw - 100px);
+        padding: 66px 0 91px 0;
+    }
+
+    .about-me__student-title {
+        font-size: 40px;
+        line-height: 40px;
+        padding: 0 0 16px 0;
+    }
+
+    .about-me__student-subtitle {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-me__text {
+        font-size: 12px;
+        line-height: 18px;
+        max-width: 364px;
+        padding: 20px 0 87px 0;
+    }
+
+    .about-me__image {
+        width: 255px;
+        height: 307px;
+    }
+
+    .about-me__portfolio {
+        padding: 0 0 90px 0;
+    }
+
+    .about-me__portfolio-title {
+        padding: 0 0 50px 50px;
+    }
+
+    .about-me__links {
+        max-width: calc(100vw - 100px);
+    }
+
+    .about-me__portfolio-links {
+        max-width: calc(100vw - 100px);
+    }
+
+    .about-me__portfolio-link {
+        padding: 0 0 19px 0;
+    }
+
+    .about-me__portfolio-link-text {
+        font-size: 28px;
+    }
+
+    .about-me__portfolio-link-logo {
+        width: 27px;
+    }
 }
