--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -15,7 +15,51 @@
     margin: 0;
 }
 
+.promo__image-container {
+    position: relative;
+    max-width: 1280px;
+    width: 100%;
+    height: 244px;
+    padding: 0 0 60px 0;
+}
+
 .promo__image {
+    position: absolute;
+    right: 70px;
     opacity: .7;
-    padding: 0 0 60px 488px;
+}
+
+@media screen and (max-width: 1024px){
+    .promo__image {
+        right: 15px;
+    }
+
+    .promo__title {
+        padding: 374px 0 140px 0;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .promo__image-container {
+        padding: 0 0 70px 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .promo__title {
+        font-size: 31px;
+        line-height: 39px;
+        padding: 257px 0 60px 0;
+    }
+
+    .promo__image-container {
+        padding: 0 0 40px 0;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+    }
+
+    .promo__image {
+        right: unset;
+    }
 }
