--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -25,7 +25,7 @@
 }
 
 .search-form__input-logo {
-    background-image: url("../../../images/inputSearchIcon.svg");
+    background-image: url("../../images/inputSearchIcon.svg");
     background-repeat: no-repeat;
     background-position: center;
     width: 34px;
@@ -51,7 +51,7 @@
 .search-form__button {
     width: 80px;
     height: 34px;
-    background-image: url("../../../images/searchButtonIcon.svg");
+    background-image: url("../../images/searchButtonIcon.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-color: #4285F4;
