--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,5 +1,8 @@
 .profile {
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .profile__title {
@@ -10,30 +13,32 @@
     line-height: 29px;
     color: #fff;
     padding: 74px 0 0 0;
+    margin: 0;
     text-align: center;
 }
 
-.profile__info {
+.profile__form {
     max-width: 410px;
     width: 100%;
     margin: 0 auto;
-    padding: 123px 0 220px 0;
+    padding: 123px 0 0 0;
+    display: flex;
+    flex-direction: column;
 }
 
-.profile__text-container {
+.profile__inputs-container {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     padding: 0 0 16px 0;
     border-bottom: 1px solid #424242;
 }
 
-.profile__text-container:last-of-type {
-    padding: 16px 0 0 0;
-    border-bottom: none;
+.profile__inputs-container:last-of-type {
+    border: none;
+    padding: 17px 0 220px 0;
 }
 
-.profile__data-title {
+.profile__label {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -44,7 +49,7 @@
     padding: 0;
 }
 
-.profile__user-data {
+.profile__input {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -53,14 +58,19 @@
     color: #fff;
     margin: 0;
     padding: 0;
+    border: none;
+    background-color: inherit;
+    max-width: 141px;
+    width: 100%;
+    outline: none;
+    /*решил убрать outline, потому что так красивее*/
 }
 
-.profile__container {
-    display: flex;
-    flex-direction: column;
+.profile__input::placeholder {
+    color: #fff;
 }
 
-.profile__button {
+.profile__form-button {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -74,7 +84,56 @@
     cursor: pointer;
 }
 
-.profile__button:last-of-type {
+.profile__form-button:hover {
+    opacity: .8;
+}
+
+.profile__button {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
     color: #EE3465;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: inherit;
+    cursor: pointer;
+}
+
+.profile__button:hover {
+    opacity: .8;
+}
+
+@media screen and (max-width: 1024px) {
+    .profile__title {
+        padding: 236px 0 0 0;
+    }
+
+    .profile__form {
+        padding: 96px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .profile__title {
+        padding: 70px 0 0 0;
+    }
+
+    .profile__form {
+        padding: 80px 0 0 0;
+        max-width: 260px;
+    }
+
+    .profile__form-button {
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .profile__button {
+        font-size: 12px;
+        line-height: 15px;
+    }
 }
 
