--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -46,7 +46,10 @@
     border: none;
     border-bottom: 1px solid #424242;
     background-color: inherit;
-    outline: none;
+}
+
+.register__input:focus {
+    outline: 1px solid #424242;
 }
 
 .register__input_error {
@@ -67,7 +70,7 @@
 .register__button {
     padding: 0;
     margin: 147px 0 0 0;
-    ont-family: 'Inter';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -80,6 +83,10 @@
     height: 45px;
     border: none;
     cursor: pointer;
+}
+
+.register__button:hover {
+    opacity: .8;
 }
 
 .register__text {
@@ -104,4 +111,45 @@
     padding: 0 0 0 6px;
     margin: 0;
     text-decoration: none;
+}
+
+.register__link:hover {
+    opacity: .7;
+}
+
+@media screen and (max-width: 1024px) {
+    .register__title {
+        padding: 310px 0 40px 0;
+    }
+
+    .register__button {
+        margin: 134px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .register {
+        max-width: 260px;
+    }
+
+    .register__title {
+        padding: 144px 0 80px 0;
+        text-align: center;
+    }
+
+    .register__button {
+        margin: 222px 0 0 0;
+    }
+
+    .register__text {
+        font-size: 12px;
+        line-height: 15px;
+        margin: 14px 0 0 0;
+    }
+
+    .register__link {
+        font-size: 12px;
+        line-height: 15px;
+        padding: 0 0 0 7px;
+    }
 }
