--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,6 +32,8 @@
     font-size: 13px;
     line-height: 16px;
     color: #fff;
+    margin: 0;
+    padding: 0;
 }
 
 .footer__links {
@@ -51,6 +53,10 @@
     margin: 0 20px 0 0;
 }
 
+.footer__link:hover {
+    opacity: .7;
+}
+
 .footer__link:last-of-type {
     margin: 0;
 }
@@ -58,5 +64,39 @@
 @media screen and (max-width: 1024px) {
     .footer__container {
         max-width: calc(100vw - 100px);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer__title {
+        font-size: 12px;
+        line-height: 15px;
+        padding: 79px 0 21px 0;
+    }
+
+    .footer__container {
+        max-width: calc(100vw - 20px);
+        flex-direction: column-reverse;
+        padding: 30px 0 0 0;
+    }
+
+    .footer__text {
+        font-size: 12px;
+        line-height: 15px;
+        text-align: center;
+        color: #8B8B8B;
+        margin: 30px 0 10px 0;
+    }
+
+    .footer__links {
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    .footer__link {
+        font-size: 12px;
+        line-height: 15px;
+        margin: 0 0 12px 0;
+        text-align: center;
     }
 }
