--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -49,6 +49,10 @@
     outline: none;
 }
 
+.login__input:focus {
+    outline: 1px solid #424242;
+}
+
 .login__input_error {
     color: #EE3465;
 }
@@ -82,6 +86,10 @@
     cursor: pointer;
 }
 
+.login__button:hover {
+    opacity: .8;
+}
+
 .login__text {
     font-family: 'Inter';
     font-style: normal;
@@ -104,4 +112,45 @@
     padding: 0 0 0 6px;
     margin: 0;
     text-decoration: none;
+}
+
+.login__link:hover {
+    opacity: .7;
+}
+
+@media screen and (max-width: 1024px) {
+    .login__title {
+        padding: 310px 0 40px 0;
+    }
+
+    .login__button {
+        margin: 134px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .login {
+        max-width: 260px;
+    }
+
+    .login__title {
+        padding: 144px 0 80px 0;
+        text-align: center;
+    }
+
+    .login__button {
+        margin: 222px 0 0 0;
+    }
+
+    .login__text {
+        font-size: 12px;
+        line-height: 15px;
+        margin: 14px 0 0 0;
+    }
+
+    .login__link {
+        font-size: 12px;
+        line-height: 15px;
+        padding: 0 0 0 7px;
+    }
 }
