--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,5 +1,6 @@
 .movies-card-list {
-    max-width: 1140px;
+    max-width: calc(100vw - 140px);
+    width: 100%;
     padding: 80px 0;
     margin: 0 auto;
     border-top: 1px solid #424242;
@@ -7,12 +8,12 @@
 
 .movies-card-list__cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
     gap: 32px 20px;
 }
 
 .movies-card-list__button {
-    max-width: 1140px;
+    max-width: calc(100vw - 140px);
     width: 100%;
     height: 36px;
     border: none;
@@ -26,4 +27,38 @@
     border-radius: 6px;
     background-color: #2F2F2F;
     margin: 80px 0 0 0;
+}
+
+.movies-card-list__button:hover {
+    opacity: .8;
+}
+
+@media screen and (max-width: 1024px) {
+    .movies-card-list {
+        max-width: calc(100vw - 60px);
+    }
+
+    .movies-card-list__cards {
+        gap: 36px 30px;
+        grid-template-columns: repeat(auto-fill, minmax(339px, 1fr));
+    }
+
+    .movies-card-list__button {
+        max-width: calc(100vw - 60px);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .movies-card-list {
+        max-width: calc(100vw - 28px);
+        padding: 50px 0 80px 0;
+    }
+
+    .movies-card-list__cards {
+        gap: 20px;
+    }
+
+    .movies-card-list__button {
+        max-width: calc(100vw - 20px);
+    }
 }
