--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -23,6 +23,7 @@
     width: 100%;
     border-right: 1px solid #424242;
     padding: 0 30px 0 0;
+    position: relative;
 }
 
 .search-form__input-logo {
@@ -50,6 +51,13 @@
 
 .search-form__input:focus {
     outline: 1px solid #424242;
+}
+
+.search-form__error {
+    position: absolute;
+    left: 31px;
+    top: 34px;
+    color: #EE3465;
 }
 
 .search-form__button {
@@ -150,6 +158,10 @@
         padding: 0 19px 0 0;
     }
 
+    .search-form__error {
+        left: 27px;
+    }
+
     .search-form__checkbox-label {
         margin: 0 0 0 19px;
     }
@@ -188,6 +200,12 @@
     .search-form__input {
         font-size: 14px;
         margin: 0 0 0 19px;
+    }
+
+    .search-form__error {
+        font-size: 12px;
+        left: 19px;
+        top: 45px;
     }
 
     .search-form__button {
