--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -43,10 +43,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 100px;
     width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px;
+    margin: 0 auto;
 }
 
 .preloader__container {
